--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "request": "^2.88.2"
   }
 }
