--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.8.11",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^2.3.0"
   }
 }
