--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
