--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.13.1",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
+    "react-date-range": "^1.0.3",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
