--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "plotly.js": "^1.52.3",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-date-range": "^1.0.3",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
+    "react-plotly.js": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-vis": "^1.11.7",
