--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-plotly.js": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-select": "^3.1.0",
     "react-vis": "^1.11.7",
     "socket.io-client": "^2.3.0"
   },
