--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-date-range": "^1.0.3",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^5.1.3",
     "react-plotly.js": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
