--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "request": "^2.88.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "twitter": "^1.7.1"
   }
 }
